# npystring_cython

./: README.md  meson.build  pyproject.toml
npystring_cython/: checks.pyx
npystring_cython/tests/: test_npystring_api.py
