[build-system]
requires = [
    "meson-python",
    "Cython >= 3.0.10",
    "numpy",
]
build-backend = "mesonpy"

[project]
name = "npystring_cython"
dynamic = ["version"]
authors = [
  { name="Quansight" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "cython",
]
